# fastapi-django-example

./: README.md  pyproject.toml
src/: alembic.ini  manage.py  settings.py
src/commands/: example_command.py
src/db/: __init__.py
src/db/migrations/: env.py
src/management/: __init__.py  cli.py
src/management/commands/: calculator.py
src/migrations/: env.py
src/migrations/versions/: 2025_07_09_1656-0ffa3e87862f.py  2025_07_09_1744-fb075959aac1.py  2025_07_16_1427-be62fdd65d5b.py  2025_07_18_1427-01e049afee1c.py  2025_07_18_1429-8272a5a8d3c3.py  2025_09_01_1709-46cb5ebbe37b.py
src/models/: __init__.py  service.py  users.py
src/shared/repositories/: __init__.py  service.py  users.py
src/tasks/: brokers.py
src/templates/: template.html
src/web/: __init__.py  __main__.py  app.py  auth.py  dependencies.py
src/web/api/: test.py
src/web/api/auth/: __init__.py  views.py
src/web/api/bell/: __init__.py  views.py
src/web/api/crud/: __init__.py  filtersets.py  services.py  views.py
src/web/api/docs/: views.py
src/web/api/examples/: __init__.py  auth.py  crud.py  services.py  session.py
src/web/api/logging/: __init__.py  views.py
src/web/api/mail/: __init__.py  schemas.py  views.py
src/web/api/monitoring/: views.py
src/web/api/permissions/: __init__.py  views.py
src/web/api/sessions/: __init__.py
src/web/api/templates/: __init__.py  views.py
src/web/api/users/: __init__.py  views.py
